--- a/main.css
+++ b/main.css
@@ -5,13 +5,13 @@
     display: flex;
     flex-wrap: wrap;
     width: 400px;
-    background-color: red;
+    background-color: #DAF0EE;
     justify-content: center;
+    font-family: Roboto, sans-serif;
 }
 
 .container div {
-    background-color: blue;
-    color: white;
+    color: #FFFFFF;
     width: 100px;
     border: 1px solid white;
     text-align: center;
@@ -21,4 +21,22 @@
 
 .display {
     flex: 75%;
+}
+
+#clear{
+    background-color: #3B413C;
+}
+
+#display {
+    background-color: #DAF0EE;
+    color: #3B413C; 
+}
+
+#num-button {
+    background-color: #94D1BE;
+    color: #FFFFFF;
+}
+
+#minus, #times, #decimal, #equals, #plus, #multiply, #divide {
+    background-color: #9DB5B2;
 }
